--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.2'
+    testImplementation 'junit:junit:4.12'
+
 
 }
 
